--- a/monitoring/docker-compose.yml
+++ b/monitoring/docker-compose.yml
@@ -83,12 +83,13 @@ services:
   grafana:
     image: grafana/grafana:11.1.0
     environment:
-      GF_SECURITY_ADMIN_USER: admin
-      GF_SECURITY_ADMIN_PASSWORD__FILE: /run/secrets/grafana_admin_password
-      TZ: ${TZ}
+      - GF_SECURITY_ADMIN_USER=admin
+      - GF_SECURITY_ADMIN_PASSWORD__FILE=/run/host_secrets/grafana_admin_password
+      - TZ=${TZ}
     volumes:
       - grafana_data:/var/lib/grafana
       - ./grafana/provisioning:/etc/grafana/provisioning:ro
+      - /srv/secrets/monitoring/grafana_admin_password.ro:/run/host_secrets/grafana_admin_password:ro
     networks:
       - mon
       - edge
@@ -117,9 +118,7 @@ volumes:
   loki_data: {}
   grafana_data: {}
 
-secrets:
-  grafana_admin_password:
-    file: /srv/secrets/monitoring/grafana_admin_password
+
 
 
 
