--- a/portal/docker-compose.yml
+++ b/portal/docker-compose.yml
@@ -1,54 +1,62 @@
-version: "3.9"
-
 name: portal
 
 services:
   redis:
-    image: redis:7-alpine
-    command: ["redis-server", "--requirepass", "${REDIS_PASSWORD}"]
-    environment:
-      - TZ=${TZ}
+    image: redis:7.2-alpine
+    command: >
+      redis-server
+      --appendonly yes
+      --save 60 1000
+      --requirepass "$$(cat /run/host_secrets/redis_password)"
     volumes:
       - redis_data:/data
+      - /srv/secrets/portal/redis_password:/run/host_secrets/redis_password:ro
     networks:
-      - portal_net
+      - portal
+    restart: unless-stopped
 
-  api:
+  portal-app:
     build:
       context: ./app
-    image: elsons/portal:latest
+      dockerfile: Dockerfile
     environment:
       - TZ=${TZ}
-      - SECRET_KEY=${SECRET_KEY}
+      # the app reads secrets from these files at runtime
+      - SECRET_KEY_FILE=/run/host_secrets/secret_key
+      - REDIS_PASSWORD_FILE=/run/host_secrets/redis_password
       - REDIS_HOST=redis
       - REDIS_PORT=6379
-      - REDIS_PASSWORD=${REDIS_PASSWORD}
-      - N8N_WEBHOOK_GENERATE_CSV=${N8N_WEBHOOK_GENERATE_CSV}
-      - R2_ACCOUNT_ID=${R2_ACCOUNT_ID}
-      - R2_BUCKET=${R2_BUCKET}
-      - R2_ACCESS_KEY_ID=${R2_ACCESS_KEY_ID}
-      - R2_SECRET_ACCESS_KEY=${R2_SECRET_ACCESS_KEY}
-      - R2_PUBLIC_BASE=${R2_PUBLIC_BASE}
+      # optional webhook target if/when you want to trigger n8n from the portal
+      - N8N_WEBHOOK_URL=
+    volumes:
+      - /srv/secrets/portal/secret_key:/run/host_secrets/secret_key:ro
+      - /srv/secrets/portal/redis_password:/run/host_secrets/redis_password:ro
     depends_on:
       - redis
     networks:
-      - portal_net
-      - edge
+      - portal
+      - proxy
     labels:
       - traefik.enable=true
       - traefik.docker.network=${TRAEFIK_NETWORK}
       - traefik.http.routers.portal.rule=Host(`${DOMAIN_PORTAL}`)
       - traefik.http.routers.portal.entrypoints=websecure
       - traefik.http.routers.portal.tls.certresolver=le
-      - traefik.http.services.portal.loadbalancer.server.port=8080
-
-networks:
-  portal_net:
-    external: true
-    name: ${PORTAL_NETWORK}
-  edge:
-    external: true
-    name: ${TRAEFIK_NETWORK}
+      - traefik.http.services.portal.loadbalancer.server.port=8000
+    healthcheck:
+      test: ["CMD", "wget", "-qO-", "http://127.0.0.1:8000/healthz"]
+      interval: 15s
+      timeout: 5s
+      retries: 10
+    restart: unless-stopped
 
 volumes:
-  redis_data: {}
+  redis_data:
+
+networks:
+  proxy:
+    external: true
+    name: ${TRAEFIK_NETWORK}
+  portal:
+    external: true
+    name: ${PORTAL_NETWORK}
