--- a/portal/docker-compose.yml
+++ b/portal/docker-compose.yml
@@ -44,6 +44,7 @@ services:
       - traefik.http.routers.portal.tls.certresolver=le
       - traefik.http.routers.portal.service=8000
       - traefik.http.services.8000.loadbalancer.server.port=8000
+      - traefik.http.routers.portal.rule=Host("${DOMAIN_PORTAL}") && PathPrefix("/")
     healthcheck:
       test: ["CMD", "wget", "-qO-", "http://127.0.0.1:8000/healthz"]
       interval: 15s
@@ -61,6 +62,7 @@ networks:
   portal:
     external: true
     name: ${PORTAL_NETWORK}
+
 
 
 
