--- a/portal/docker-compose.yml
+++ b/portal/docker-compose.yml
@@ -46,11 +46,11 @@ services:
         # Service
       - traefik.http.routers.portal.service=portal-svc
       - traefik.http.services.portal-svc.loadbalancer.server.port=8000
-    healthcheck:
-      test: ["CMD", "wget", "-qO-", "http://127.0.0.1:8000/healthz"]
-      interval: 15s
-      timeout: 5s
-      retries: 10
+     healthcheck:
+       test: ["CMD-SHELL", "curl -f http://127.0.0.1:8000/healthz || exit 1"]
+       interval: 15s
+       timeout: 5s
+       retries: 10
     restart: unless-stopped
 
 volumes:
@@ -63,6 +63,7 @@ networks:
   portal:
     external: true
     name: ${PORTAL_NETWORK}
+
 
 
 
